# de_hypertext

./: Cargo.toml  README.md
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/examples/: nested.rs
crates/core/src/: derive.rs  lib.rs
crates/core/tests/: option_string.rs
crates/macro/: CHANGELOG.md  Cargo.toml
crates/macro/examples/: 01_single.rs  02_nested.rs  03_serde_json.rs
crates/macro/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  nutype.rs  option_string.rs  option_t.rs  string.rs  transform.rs  vec.rs
crates/wrapper/: CHANGELOG.md  Cargo.toml
crates/wrapper/examples/: 00_without_macro.rs  01_single.rs  macroless.rs  nested.rs  no_selector.rs  opt_str.rs  serde_json.rs  single.rs
crates/wrapper/src/: lib.rs
