[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
de_hypertext_core = "0.1.2"
#de_hypertext_core = { path = "./crates/core" }

de_hypertext_macro = "0.1.1"
#de_hypertext_macro = { path = "./crates/macro" }

de_hypertext = { path = "./crates/wrapper" }

proc-macro2 = "1.0.86"
quote = "1.0"
syn = { version = "2.0.72", features = ["full"] }

scraper = "0.17.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive", "rc"] }
reqwest = { version = "0.11.26", features = [
    "serde_json",
    "tokio-rustls",
    "json",
] }
tokio = { version = "1.28.2", features = [
    "rt-multi-thread",
    "macros",
] }
pretty_assertions = "1.4.0"
prettyplease = "0.2.22"
