[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
de_hypertext_core = "0.1.4"
#de_hypertext_core = { path = "./crates/core" }

de_hypertext_macro = "0.1.1"
#de_hypertext_macro = { path = "./crates/macro" }

de_hypertext = { path = "./crates/wrapper" }

proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }

scraper = "0.20.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive", "rc"] }
reqwest = { version = "0.12.7", features = [
    "json",
    "rustls-tls",
    "json",
] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
] }
pretty_assertions = "1.4.0"
prettyplease = "0.2.22"
