[package]
name = "de_hypertext_core"
version = "0.1.1"
edition = "2021"
description = "core of how de_hypertext works"
license-file = "../../LICENSE"

[dependencies]
scraper.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
