[package]
name = "de_hypertext_macro"
version = "0.1.0"
edition = "2021"
description = "derive macro for de_hypertext"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
de_hypertext_core.workspace = true
scraper.workspace = true

proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
