[package]
name = "de_hypertext"
version = "0.1.1"
edition = "2021"
description = "serde_json ergonomics for parsing html"
license-file = "../../LICENSE"

[dependencies]
de_hypertext_core.workspace = true
de_hypertext_macro.workspace = true
scraper.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
